--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -136,6 +136,8 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Event.h" />
+    <ClInclude Include="EventType.h" />
     <ClInclude Include="Handler.h" />
     <ClInclude Include="InventoryComponent.h" />
     <ClInclude Include="Logger.h" />
