--- a/ASCIISurvival/ASCIISurvival.vcxproj.filters
+++ b/ASCIISurvival/ASCIISurvival.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Event.h">
       <Filter>Header Files\Util</Filter>
     </ClInclude>
+    <ClInclude Include="Generator.h">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
