--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="EventBox.cpp" />
+    <ClCompile Include="GUI.cpp" />
     <ClCompile Include="Handler.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -141,10 +142,12 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Generator.h" />
+    <ClInclude Include="GUI.h" />
     <ClInclude Include="Handler.h" />
     <ClInclude Include="InventoryComponent.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="EventBox.h" />
+    <ClInclude Include="UsableComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
