--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="CommonTypes.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Generator.h" />
@@ -147,6 +148,7 @@
     <ClInclude Include="InventoryComponent.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="EventBox.h" />
+    <ClInclude Include="StatsComponent.h" />
     <ClInclude Include="UsableComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
