--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -128,7 +128,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="Component.h" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="EventBox.cpp" />
@@ -140,16 +139,14 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="CommonTypes.h" />
+    <ClInclude Include="Components.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Generator.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="Handler.h" />
-    <ClInclude Include="InventoryComponent.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="EventBox.h" />
-    <ClInclude Include="StatsComponent.h" />
-    <ClInclude Include="UsableComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
