--- a/ASCIISurvival/ASCIISurvival.vcxproj.filters
+++ b/ASCIISurvival/ASCIISurvival.vcxproj.filters
@@ -19,12 +19,6 @@
     <Filter Include="Header Files\Util">
       <UniqueIdentifier>{20e3fdb8-9430-44fc-af61-4c4832f4dd8c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Components">
-      <UniqueIdentifier>{5111d463-fc14-4264-98da-ca82f94916d5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Components">
-      <UniqueIdentifier>{69f1557a-3885-4ff5-a467-2064c3739706}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -35,9 +29,6 @@
     </ClInclude>
     <ClInclude Include="Logger.h">
       <Filter>Header Files\Util</Filter>
-    </ClInclude>
-    <ClInclude Include="InventoryComponent.h">
-      <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Handler.h">
       <Filter>Header Files\Util</Filter>
@@ -51,17 +42,14 @@
     <ClInclude Include="Generator.h">
       <Filter>Header Files\Util</Filter>
     </ClInclude>
-    <ClInclude Include="UsableComponent.h">
-      <Filter>Header Files\Components</Filter>
-    </ClInclude>
     <ClInclude Include="GUI.h">
       <Filter>Header Files\Util</Filter>
     </ClInclude>
-    <ClInclude Include="StatsComponent.h">
-      <Filter>Header Files\Components</Filter>
-    </ClInclude>
     <ClInclude Include="CommonTypes.h">
       <Filter>Header Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Components.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -76,9 +64,6 @@
     </ClCompile>
     <ClCompile Include="Logger.cpp">
       <Filter>Source Files\Util</Filter>
-    </ClCompile>
-    <ClCompile Include="Component.h">
-      <Filter>Header Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="Handler.cpp">
       <Filter>Source Files\Util</Filter>
