--- a/.gitignore
+++ b/.gitignore
@@ -245,12 +245,7 @@ launch.json
 *.swp
 /include/
 /lib/
-/buildx64/
-libtcod_debug.so
-libtcod.so
-libtcodxx_debug.so
-libtcodxx.so
-#makefile
-terminal.png
-log.txt
-exec
+/buildx64/*.o
+/buildx64/*.so
+/buildx64/log.txt
+/buildx64/game
