--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,6 +3,9 @@
     // for the documentation about the tasks.json format
     "version": "0.1.0",
     "command": "make",
+    "options":{
+        "cwd": "${workspaceRoot}/buildx64"
+    },
     "isShellCommand": true,
     "showOutput": "always",
     "echoCommand": true
