unit test progress

--- a/x64/makefile
+++ b/x64/makefile
@@ -2,42 +2,50 @@ ODIR = ./DebugLinux/
 SDIR = ../ASCIISurvival
 TCODARGS = -Iinclude -L. -ltcod -ltcodxx -Wl,-rpath=. -Wall -g -std=c++11
 ARGS = -Wall -g -std=c++11
+COM = g++
 
+REQUIREDFILES = $(ODIR)Event.o $(ODIR)Logger.o $(ODIR)EventBox.o $(ODIR)Components.o $(ODIR)Handler.o $(ODIR)Actor.o $(ODIR)GUI.o $(ODIR)Engine.o
 
-game: Event.o Logger.o EventBox.o Components.o Handler.o Actor.o GUI.o Engine.o Main.o
-	mkdir -p ./DebugLinux
-	g++ -o game $(ODIR)Event.o $(ODIR)Logger.o $(ODIR)EventBox.o $(ODIR)Components.o \
-		$(ODIR)Handler.o $(ODIR)Actor.o $(ODIR)GUI.o $(ODIR)Engine.o $(ODIR)Main.o \
-		$(TCODARGS)
+game: pre $(REQUIREDFILES) $(ODIR)Main.o
+	
 	#./exec
+
+test: pre $(REQUIREDFILES) $(ODIR)Test.o
+	$(COM) -o test $(REQUIREDFILES) $(ODIR)Test.o $(TCODARGS)
+
+pre:
+	mkdir -p ./DebugLinux
 
 clean:
 	rm *.o
 	rm game
 
-Event.o: $(SDIR)/Event.cpp $(SDIR)/Event.h
-	g++ -c $<  -o $(ODIR)$@ $(ARGS)
+$(ODIR)Event.o: $(SDIR)/Event.cpp $(SDIR)/Event.h
+	$(COM) -c $<  -o $@ $(ARGS)
 
-Logger.o: $(SDIR)/Logger.cpp $(SDIR)/Logger.h
-	g++ -c $<  -o $(ODIR)$@ $(ARGS)
+$(ODIR)Logger.o: $(SDIR)/Logger.cpp $(SDIR)/Logger.h
+	$(COM) -c $<  -o $@ $(ARGS)
 
-EventBox.o: $(SDIR)/EventBox.cpp $(SDIR)/EventBox.h Event.o Logger.o
-	g++ -c $<  -o $(ODIR)$@ $(ARGS)
+$(ODIR)EventBox.o: $(SDIR)/EventBox.cpp $(SDIR)/EventBox.h $(ODIR)Event.o $(ODIR)Logger.o
+	$(COM) -c $<  -o $@ $(ARGS)
 
-Components.o: $(SDIR)/Components.cpp $(SDIR)/Components.h EventBox.o
-	g++ -c $<  -o $(ODIR)$@ $(ARGS)
+$(ODIR)Components.o: $(SDIR)/Components.cpp $(SDIR)/Components.h $(ODIR)EventBox.o
+	$(COM) -c $<  -o $@ $(ARGS)
 
-Handler.o: $(SDIR)/Handler.cpp $(SDIR)/Handler.h Event.o Logger.o EventBox.o
-	g++ -c $<  -o $(ODIR)$@ $(TCODARGS)
+$(ODIR)Handler.o: $(SDIR)/Handler.cpp $(SDIR)/Handler.h $(ODIR)Event.o $(ODIR)Logger.o $(ODIR)EventBox.o
+	$(COM) -c $<  -o $@ $(TCODARGS)
 
-Actor.o: $(SDIR)/Actor.cpp $(SDIR)/Actor.h Components.o
-	g++ -c $< -o $(ODIR)$@ $(ARGS)
+$(ODIR)Actor.o: $(SDIR)/Actor.cpp $(SDIR)/Actor.h $(ODIR)Components.o
+	$(COM) -c $< -o $@ $(ARGS)
 
-GUI.o: $(SDIR)/GUI.cpp $(SDIR)/GUI.h
-	g++ -c $< -o $(ODIR)$@ $(TCODARGS)
+$(ODIR)GUI.o: $(SDIR)/GUI.cpp $(SDIR)/GUI.h
+	$(COM) -c $< -o $@ $(TCODARGS)
 
-Engine.o: $(SDIR)/Engine.cpp $(SDIR)/Engine.h Actor.o Logger.o Handler.o EventBox.o GUI.o
-	g++ -c $< -o $(ODIR)$@ $(TCODARGS)
+$(ODIR)Engine.o: $(SDIR)/Engine.cpp $(SDIR)/Engine.h $(ODIR)Actor.o $(ODIR)Logger.o $(ODIR)Handler.o $(ODIR)EventBox.o $(ODIR)GUI.o
+	$(COM) -c $< -o $@ $(TCODARGS)
 
-Main.o: $(SDIR)/Main.cpp Engine.o
-	g++ -c $< -o $(ODIR)$@ $(TCODARGS)
+$(ODIR)Main.o: $(SDIR)/Main.cpp $(ODIR)Engine.o
+	$(COM) -c $< -o $@ $(TCODARGS)
+
+$(ODIR)Test.o: $(SDIR)/Test.cpp $(ODIR)Engine.o 
+	$(COM) -c $< -o $@ $(ARGS)
