--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -128,25 +128,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="Components.cpp" />
+    <ClCompile Include="Component.cpp" />
     <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Event.cpp" />
-    <ClCompile Include="EventBox.cpp" />
-    <ClCompile Include="GUI.cpp" />
-    <ClCompile Include="Handler.cpp" />
-    <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="graphicsComponent.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
-    <ClInclude Include="Components.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="componentTypes.h" />
     <ClInclude Include="Engine.h" />
-    <ClInclude Include="Event.h" />
-    <ClInclude Include="Generator.h" />
-    <ClInclude Include="GUI.h" />
-    <ClInclude Include="Handler.h" />
-    <ClInclude Include="Logger.h" />
-    <ClInclude Include="EventBox.h" />
+    <ClInclude Include="graphicsComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
