--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -128,18 +128,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="Component.cpp" />
-    <ClCompile Include="Coordinate.cpp" />
+    <ClCompile Include="./Components/Component.cpp" />
+    <ClCompile Include="./Utils/Coordinate.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="TransformComponent.cpp" />
+    <ClCompile Include="./Components/TransformComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
-    <ClInclude Include="Component.h" />
-    <ClInclude Include="Coordinate.h" />
+    <ClInclude Include="./Components/Headers/Component.h" />
+    <ClInclude Include="./Utils/Headers/Coordinate.h" />
     <ClInclude Include="Engine.h" />
-    <ClInclude Include="TransformComponent.h" />
+    <ClInclude Include="./Components/Headers/TransformComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
