--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -143,7 +143,7 @@
     <ClInclude Include="./Components/Headers/Actor.h" />
     <ClInclude Include="./Components/Headers/Component.h" />
     <ClInclude Include="./Utils/Headers/Coordinate.h" />
-    <ClInclude Include="Engine.h" />
+    <ClInclude Include="./Headers/Engine.h" />
     <ClInclude Include="./Components/Headers/TransformComponent.h" />
     <ClCompile Include="./Components/Headers/MotionComponent.h" />
     <ClCompile Include="./Handlers/Headers/MotionTransformHandler.h" />
