added transform manager files

--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="./Handlers/Handler.cpp" />
     <ClCompile Include="./Managers/Manager.cpp" />
     <ClCompile Include="./Managers/EntityManager.cpp" />
+    <ClCompile Include="./Managers/TransformManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="./Components/Headers/Actor.h" />
@@ -150,6 +151,7 @@
     <ClCompile Include="./Handlers/Headers/Handler.h" />
     <ClInclude Include="./Managers/Headers/EntityManager.h" />
     <ClInclude Include="./Managers/Headers/Manager.h" />
+    <ClInclude Include="./Managers/Headers/TransformManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
