--- a/ASCIISurvival/ASCIISurvival.vcxproj.filters
+++ b/ASCIISurvival/ASCIISurvival.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="./Managers/Headers/Manager.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
+    <ClInclude Include="TransformManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -103,6 +106,9 @@
     </ClCompile>
     <ClCompile Include="./Managers/Manager.cpp">
       <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformManager.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
