--- a/ASCIISurvival/ASCIISurvival.vcxproj
+++ b/ASCIISurvival/ASCIISurvival.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="./Managers/Manager.cpp" />
     <ClCompile Include="./Managers/EntityManager.cpp" />
     <ClCompile Include="./Managers/TransformManager.cpp" />
+    <ClCompile Include="./Managers/MotionManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="./Components/Headers/Actor.h" />
@@ -152,6 +153,7 @@
     <ClInclude Include="./Managers/Headers/EntityManager.h" />
     <ClInclude Include="./Managers/Headers/Manager.h" />
     <ClInclude Include="./Managers/Headers/TransformManager.h" />
+    <ClInclude Include="./Managers/Headers/MotionManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
